--- a/module.yaml
+++ b/module.yaml
@@ -10,6 +10,7 @@ notests *default:
 
   deps:
     - vostok.tracing.abstractions
+    - vostok.commons.helpers
     - vostok.devtools
 
 full-build > notests:
