--- a/Vostok.Tracing.Extensions/Vostok.Tracing.Extensions.csproj
+++ b/Vostok.Tracing.Extensions/Vostok.Tracing.Extensions.csproj
@@ -1,31 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
+
   <Import Project="..\..\vostok.devtools\library-common-props\Main-Project.props" />
   <Import Project="..\..\vostok.devtools\git-commit-to-assembly-title\Vostok.Tools.GitCommit2AssemblyTitle.props" />
+  
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Configurations>Debug;Release</Configurations>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
+
   <PropertyGroup>
     <VersionPrefix>0.0.1</VersionPrefix>
   </PropertyGroup>
+
   <PropertyGroup>
     <Title>Vostok.Tracing.Extensions</Title>
     <Description>Vostok.Tracing.Extensions</Description>
   </PropertyGroup>
+
   <PropertyGroup>
     <PackageProjectUrl>https://github.com/vostok/tracing.extensions.git</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/vostok/tracing.extensions.git/blob/master/LICENSE</PackageLicenseUrl>
     <PackageTags>vostok</PackageTags>
     <RepositoryUrl>https://github.com/vostok/tracing.extensions.git</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Extensions\UrlExtensions.cs" Link="Commons\UrlExtensions.cs" />
+    <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\UrlNormalizer.cs" Link="Commons\UrlNormalizer.cs" />
+  </ItemGroup>
+
   <ItemGroup>
     <Reference Include="Vostok.Tracing.Abstractions">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\vostok.tracing.abstractions\Vostok.Tracing.Abstractions\bin\Release\netstandard2.0\Vostok.Tracing.Abstractions.dll</HintPath>
     </Reference>
-  <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Extensions\UrlExtensions.cs" Link="Commons\UrlExtensions.cs" />
-  <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\UrlNormalizer.cs" Link="Commons\UrlNormalizer.cs" />
   </ItemGroup>
+
 </Project>
