--- a/Vostok.Tracing.Extensions/Vostok.Tracing.Extensions.csproj
+++ b/Vostok.Tracing.Extensions/Vostok.Tracing.Extensions.csproj
@@ -27,8 +27,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Extensions\UrlExtensions.cs" Link="Commons\UrlExtensions.cs" />
-    <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\UrlNormalizer.cs" Link="Commons\UrlNormalizer.cs" />
+    <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Url\UrlNormalizer.cs" Link="Commons\UrlNormalizer.cs" />
+    <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Url\UrlExtensions.cs" Link="Commons\UrlExtensions.cs" />
   </ItemGroup>
 
   <ItemGroup>
