--- a/Vostok.Tracing.Extensions/Vostok.Tracing.Extensions.csproj
+++ b/Vostok.Tracing.Extensions/Vostok.Tracing.Extensions.csproj
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\vostok.devtools\library-common-props\Main-Project.props" />
   <Import Project="..\..\vostok.devtools\git-commit-to-assembly-title\Vostok.Tools.GitCommit2AssemblyTitle.props" />
@@ -21,8 +22,10 @@
     <RepositoryUrl>https://github.com/vostok/tracing.extensions.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Url\UrlNormalizer.cs" Link="Commons\UrlNormalizer.cs" />
-    <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Url\UrlExtensions.cs" Link="Commons\UrlExtensions.cs" />
+    <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Url\UrlNormalizer.cs"
+             Link="Commons\UrlNormalizer.cs" />
+    <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Url\UrlExtensions.cs"
+             Link="Commons\UrlExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Vostok.Tracing.Abstractions">
