use $(ReferencesFramework) instead netstandard2.0

--- a/Vostok.Tracing.Extensions/Vostok.Tracing.Extensions.csproj
+++ b/Vostok.Tracing.Extensions/Vostok.Tracing.Extensions.csproj
@@ -28,7 +28,7 @@
   <ItemGroup>
     <Reference Include="Vostok.Tracing.Abstractions">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\vostok.tracing.abstractions\Vostok.Tracing.Abstractions\bin\Release\netstandard2.0\Vostok.Tracing.Abstractions.dll</HintPath>
+      <HintPath>..\..\vostok.tracing.abstractions\Vostok.Tracing.Abstractions\bin\Release\$(ReferencesFramework)\Vostok.Tracing.Abstractions.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
