--- a/module.yaml
+++ b/module.yaml
@@ -15,6 +15,10 @@ notests *default:
     - vostok.commons.helpers/src
 
 full-build > notests:
+  deps:
+    - -vostok.devtools
+    - vostok.devtools@with-net6.0
+
   build:
     target: Vostok.Tracing.Extensions.sln
     configuration: Release
