--- a/module.yaml
+++ b/module.yaml
@@ -18,6 +18,7 @@ full-build > notests:
   deps:
     - -vostok.devtools
     - vostok.devtools@with-net6.0
+    - vostok.tracing
 
   build:
     target: Vostok.Tracing.Extensions.sln
