--- a/Vostok.Tracing.Extensions/Vostok.Tracing.Extensions.csproj
+++ b/Vostok.Tracing.Extensions/Vostok.Tracing.Extensions.csproj
@@ -20,6 +20,9 @@
     <RepositoryUrl>https://github.com/vostok/tracing.extensions.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Disposable\ActionDisposable.cs">
+      <Link>Commons\ActionDisposable.cs</Link>
+    </Compile>
     <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Url\UrlNormalizer.cs" Link="Commons\UrlNormalizer.cs" />
     <Compile Include="..\..\vostok.commons.helpers\Vostok.Commons.Helpers\Url\UrlExtensions.cs" Link="Commons\UrlExtensions.cs" />
   </ItemGroup>
